<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fafafa"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:paddingStart="16.7dp"
        android:paddingTop="19dp"
        android:paddingBottom="19dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="18.3sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16.7dp"
        android:layout_marginTop="23.3dp"
        android:layout_marginEnd="16.7dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6.7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageView1"
                android:layout_width="60.3dp"
                android:layout_height="60.3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/translogo"
                app:riv_border_color="#333333"
                app:riv_border_width="0dip"
                app:riv_corner_radius="10dp"
                app:riv_mutate_background="true"
                app:riv_oval="false"
                app:riv_tile_mode="clamp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:includeFontPadding="false"
                    android:text="NA"
                    android:textColor="@color/black_25303c"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12.3dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="NA"
                    android:textColor="@color/grey_828990"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rect_green"
                android:fontFamily="@font/sf_pro_display_medium"
                android:includeFontPadding="false"
                android:paddingStart="14dp"
                android:paddingTop="4dp"
                android:paddingEnd="14dp"
                android:paddingBottom="4dp"
                android:text="@string/edit"
                android:textColor="@color/green_15d1a4"
                android:textSize="12.7sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16.7dp"
        android:layout_marginTop="23.3dp"
        android:layout_marginEnd="16.7dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6.7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="18.3dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_credit" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="11.7dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/credited_amount"
                    android:textColor="@color/black_25303c"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:includeFontPadding="false"
                    android:text="@string/_15"
                    android:textColor="@color/red_ff577f"
                    android:textSize="15sp" />

            </LinearLayout>


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/llManageAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_address" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="11.7dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/manage_address"
                    android:textColor="@color/black_25303c"
                    android:textSize="15sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_coltactus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="11.7dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/contact_us"
                    android:textColor="@color/black_25303c"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="17.3dp"
                android:background="@color/viewLine" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="11.7dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/share_with_friend"
                    android:textColor="@color/black_25303c"
                    android:textSize="15sp" />
            </LinearLayout>








            <LinearLayout
                android:id="@+id/manage_barbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_user__1_" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="11.7dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="Manage Barbers"
                    android:textColor="@color/black_25303c"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="17.3dp"
                android:background="@color/viewLine" />

            <LinearLayout
                android:id="@+id/llTandC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_terms" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="11.7dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/black_25303c"
                    android:textSize="15sp" />
            </LinearLayout>




            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="17.3dp"
                android:background="@color/viewLine" />

            <LinearLayout
                android:id="@+id/li_transactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_terms" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="11.7dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="Transactions"
                    android:textColor="@color/black_25303c"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="17.3dp"
                android:layout_marginRight="15dp"
                android:background="@color/viewLine" />

            <LinearLayout
                android:id="@+id/llLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.3dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/sign_out"
                    android:textColor="@color/black_25303c"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>